Fix issue where invisible dropdown blocked underlying widgets

--- a/web/form/style/soresu-react-widget-dropdown.less
+++ b/web/form/style/soresu-react-widget-dropdown.less
@@ -76,7 +76,7 @@
     transition-duration: 0.05s;
     opacity: 0;
 
-    display: block !important;
+    display: block;
 
     ul {
       height: @popup-height - 92px;
